Whitespace css styles have been fixed

--- a/frontend/stylus/main.styl
+++ b/frontend/stylus/main.styl
@@ -2,7 +2,6 @@
 @import 'mixins'
 @import 'loader'
 @import 'utils'
-$white-space-margin = 0.3em
 $profile-pic-size = 64 px
 
 body,html
@@ -21,12 +20,6 @@ body,html
 		height $footer-height
 .ace_editor
 	height 200px
-span.left-space
-	margin-left $white-space-margin
-span.right-space
-	margin-right $white-space-margin
-span.both-space
-	margin $white-space-margin 0
 .profile-image, .profile-image img
 	height $profile-pic-size
 	width $profile-pic-size
