--- a/frontend/stylus/utils.styl
+++ b/frontend/stylus/utils.styl
@@ -1,9 +1,10 @@
-span.left-space
+$white-space-margin = 4px
+.left-space
 	margin-left: $white-space-margin
-span.right-space
+.right-space
 	margin-right: $white-space-margin
-span.both-space
-	margin: $white-space-margin 0
+.both-space
+	margin: 0 $white-space-margin
 .square
 	border-radius 0
 .block-middle
